Finished deleting student logic